# ChatStack

./: .env.example  .gitignore  .replit  AGENT_TASKS.md  AI_Phone_System_Technical_Documentation.md  ARCHITECTURE_REVIEW_FOR_GPT5.md  CUSTOMER_LOGIN_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_NEUROSPHERE.md  DEPLOY_NOTION_NOW.md  DEPLOY_TIME_TOOL.sh  DEPLOY_TO_PRODUCTION.md  DIGITALOCEAN_DEPLOYMENT_INSTRUCTIONS.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.notion  IMPLEMENTATION_PLAN_PHASE1.md  JWT_SETUP_INSTRUCTIONS.md  LLM_MODE_SWITCHER_BLUEPRINT.md  MULTI_PROJECT_ARCHITECTURE.md  MULTI_TENANT_SETUP.md  NEUROSPHERE_FINAL_ARCHITECTURE_FOR_GPT5.md  NOTION_CUSTOMER_DATABASE.md  NOTION_INTEGRATION_GUIDE.md  PACIFIC_TIME_TOOL_GUIDE.md  PRODUCTION_DEPLOYMENT_COMMANDS.md  PRODUCTION_DEPLOYMENT_NOTION.md  PRODUCTION_FIX_NOTION.md  README-REALTIME.md  REALTIME_API_IMPLEMENTATION.md  ai-memory-main.py  check_deployment.sh  check_do_logs.sh  check_personality_flow.sh  check_production_logs.sh  clean_notion_replit.sh  cleanup_memories.py  config.json  config_loader.py  (+62 more)
.notion_backup_replit/: notion-api-server.js  notion-sync.js
app/: http_memory.py  jwt_utils.py  llm.py  main.py  memory.py  models.py  notion_client.py  packer.py  prompt_templates.py  realtime_bridge.py  status_routes.py  tools.py
config/: monitor.yml
deploy/: fix-nginx-conflict.sh
docs/: CHATGPT_FIX_ANALYSIS.md  COMPLETE_DEPLOYMENT.md  CRITICAL_FIX_DEPLOYMENT.md  CUSTOMER_LOGIN_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  FINAL_SERVER_SETUP.md  LLM_MODE_SWITCHER_BLUEPRINT.md  (+6 more)
(+41 files in other folders)
